# flaskInicial

./: README.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
app/: __init__.py
app/static/css/: main.css
app/templates/: base.html  index.html
